# KRY

./: .gitignore  README.md  bigrams.csv  otp.py  trigrams.csv
otp/: otp.py  words.json
rsa/: CMakeLists.txt  run.sh
rsa/src/: argparse.cpp  argparse.hpp  main.cpp  rsa.cpp  rsa.hpp
